Characters Management in Parasite Scene
CharacterButtonManager - Working:
Actually was deleted all thrash code and called correctly the instance of every model when the button is clicked.

CharacterManager - Created:
The functions to position, delete, and rotate the models are working.

UIManager - Edited:
Deleted thrash code.

Pending Tasks:
1. Models instantiate in plane correction.
2. Add random model selection in GameScene.
3. Show all description info in a new panel.
4. Create and add the missing models and the details information.

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -59,8 +59,8 @@
     <Compile Include="Assets\Scripts\CharacterButtonManager.cs" />
     <Compile Include="Assets\Scripts\Character.cs" />
     <Compile Include="Assets\Scripts\ARInteractionsManager.cs" />
-    <Compile Include="Assets\Scripts\ModelInteractionManager.cs" />
     <Compile Include="Assets\Scripts\MainUIManager.cs" />
+    <Compile Include="Assets\Scripts\CharacterManager.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\TextMesh Pro\Shaders\TMPro.cginc" />
